syntax = "proto3";
import "google/protobuf/empty.proto";
package grpc.ex2;
option java_multiple_files = true;
option java_package = "com.asw.billing.front.grpc";
option java_outer_classname = "BillingServiceStreamProto";
message AddNewCardRequest{
  string personname = 1;
}

message AddNewCardResponse{
  int64 card = 1;
  string personname = 2;
  string datecreaded = 3;
  double balance = 4;
}
message MoneyRequest{
  int64 card = 1;
  double money = 2;
  string datetime = 3;
}
message GetCardBalanceRequest{
  int64 card = 1;
}
message GetCardBalanceResponse{
  double balance = 1;
}
service BillingServiceStream{
  rpc addNewCard(AddNewCardRequest) returns (AddNewCardResponse);
  rpc processOperation(stream MoneyRequest) returns (google.protobuf.Empty);
  rpc getCardBalance(GetCardBalanceRequest) returns (GetCardBalanceResponse);
}